# libzcloud

./: .gitignore  Makefile.am  api.html  configure.ac  genindex.html  hacking_libzcloud.html  index.html  introduction.html  objects.inv  plugins.html  search.html  searchindex.js  using_libzcloud.html  using_zcloud.html  writing_plugins.html
api/: download_consumer.html  list_consumer.html  progress_listener.html  store.html  upload_producer.html
config/: libzcloud.m4
config/libzcloud/: dirs.m4  plugin.m4
hacking_libzcloud/: headers.html
plugins/disk/: .gitignore  AUTHORS  Makefile.am  NEWS  README  autogen  configure.ac
sources/_sources/: writing_plugins.txt
using_libzcloud/: creating_a_store.html  library_setup.html  module_info.html  object_model.html
writing_plugins/: build_process.html  initialization.html  introduction.html  store_subclass.html  xml_definition.html
